--- a/src/main/resources/public/src/scss/template/_tree.scss
+++ b/src/main/resources/public/src/scss/template/_tree.scss
@@ -21,6 +21,7 @@ ul.tree {
   cursor: default;
 
   li {
+    display: block;
     position: relative;
     line-height: $tree-line-height;
     padding-right: 0.125rem; // 2px
