--- a/src/main/resources/public/template/user/userEdit.html
+++ b/src/main/resources/public/template/user/userEdit.html
@@ -12,7 +12,7 @@
         <div class="user-header">
             <div class="header-title flex-row align-items-baseline">
                 <h1 th:text="#{user.label.user}"></h1>
-                <h6 class="description" th:text="#{user.msg.editDescription}"></h6>
+                <h6 class="description ml-2" th:text="#{user.msg.editDescription}"></h6>
             </div>
         </div>
         <div class="user-content-edit">
