--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -1938,13 +1938,10 @@ button .icon-plus {
 .itsm-container .main .header-title {
   padding: 1.563rem 0px 3.875rem 0px;
 }
-.itsm-container .main .header-title .description {
-  margin-left: 0.625rem;
-}
 .itsm-container .main .header-search {
   padding: 0.3125rem 0px 1.875rem 0px;
 }
-.itsm-container .main .header-search .txt-num {
+.itsm-container .main .header-search .search-count {
   color: #7E848C;
 }
 .itsm-container .main .list a, .itsm-container .main .list button {
@@ -2834,12 +2831,12 @@ button .icon-plus {
 }
 .gmodal-wrapper {
   display: none;
-  overflow: auto;
   position: fixed;
   top: 0;
   right: 0;
   bottom: 0;
   left: 0;
+  overflow: auto;
 }
 .gmodal-wrapper.gmodal-active {
   z-index: 999999;
@@ -2860,8 +2857,8 @@ button .icon-plus {
   border-radius: 0.0625rem;
   position: absolute;
   top: 8em;
-  left: 0;
   right: 0;
+  left: 0;
   width: 100%;
   line-height: 1;
   max-width: 26.875rem;
@@ -4422,6 +4419,7 @@ ul.tree {
   cursor: default;
 }
 ul.tree li {
+  display: block;
   position: relative;
   line-height: 1.875rem;
   padding-right: 0.125rem;
@@ -5776,7 +5774,36 @@ body.modal-active {
   content: "";
   vertical-align: middle;
   opacity: 1;
-  animation: rotateLoader 0.4s infinite linear;
+  -webkit-animation-delay: 0s;
+  -webkit-animation-duration: 0.4s;
+  -webkit-animation-name: rotateLoader;
+  -webkit-animation-timing-function: linear;
+  -webkit-animation-iteration-count: infinite;
+  -webkit-animation-direction: normal;
+  -moz-animation-delay: 0s;
+  -moz-animation-duration: 0.4s;
+  -moz-animation-name: rotateLoader;
+  -moz-animation-timing-function: linear;
+  -moz-animation-iteration-count: infinite;
+  -moz-animation-direction: normal;
+  -o-animation-delay: 0s;
+  -o-animation-duration: 0.4s;
+  -o-animation-name: rotateLoader;
+  -o-animation-timing-function: linear;
+  -o-animation-iteration-count: infinite;
+  -o-animation-direction: normal;
+  -ms-animation-delay: 0s;
+  -ms-animation-duration: 0.4s;
+  -ms-animation-name: rotateLoader;
+  -ms-animation-timing-function: linear;
+  -ms-animation-iteration-count: infinite;
+  -ms-animation-direction: normal;
+  animation-delay: 0s;
+  animation-duration: 0.4s;
+  animation-name: rotateLoader;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+  animation-direction: normal;
 }
 .tagify--loading .tagify__input:empty::after {
   margin-left: 0;
@@ -5792,6 +5819,10 @@ body.modal-active {
   z-index: 1;
   outline: 0;
   cursor: default;
+  -webkit-transition: 0.13s ease-out;
+  -moz-transition: 0.13s ease-out;
+  -o-transition: 0.13s ease-out;
+  -ms-transition: 0.13s ease-out;
   transition: 0.13s ease-out;
 }
 .tagify__tag > div {
@@ -5804,17 +5835,26 @@ body.modal-active {
   line-height: inherit;
   -webkit-user-select: none;
   user-select: none;
+  -webkit-transition: 0.13s ease-out;
+  -moz-transition: 0.13s ease-out;
+  -o-transition: 0.13s ease-out;
+  -ms-transition: 0.13s ease-out;
   transition: 0.13s ease-out;
 }
 .tagify__tag > div > * {
   display: inline-block;
-  vertical-align: top;
-  min-width: 1ch;
   max-width: max-content;
+  text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
-  text-overflow: ellipsis;
-  transition: 0.8s ease, 0.1s color;
+  word-wrap: normal;
+  vertical-align: top;
+  min-width: 1ch;
+  -webkit-transition: 0.8s ease;
+  -moz-transition: 0.8s ease;
+  -o-transition: 0.8s ease;
+  -ms-transition: 0.8s ease;
+  transition: 0.8s ease;
 }
 .tagify__tag > div > [contenteditable] {
   max-width: 21.88rem;
@@ -5836,7 +5876,36 @@ body.modal-active {
   z-index: -1;
   pointer-events: none;
   transition: 120ms ease;
-  animation: tags--bump 0.3s ease-out 1;
+  -webkit-animation-delay: 0s;
+  -webkit-animation-duration: 0.3s;
+  -webkit-animation-name: tags--bump;
+  -webkit-animation-timing-function: ease-out;
+  -webkit-animation-iteration-count: 1;
+  -webkit-animation-direction: normal;
+  -moz-animation-delay: 0s;
+  -moz-animation-duration: 0.3s;
+  -moz-animation-name: tags--bump;
+  -moz-animation-timing-function: ease-out;
+  -moz-animation-iteration-count: 1;
+  -moz-animation-direction: normal;
+  -o-animation-delay: 0s;
+  -o-animation-duration: 0.3s;
+  -o-animation-name: tags--bump;
+  -o-animation-timing-function: ease-out;
+  -o-animation-iteration-count: 1;
+  -o-animation-direction: normal;
+  -ms-animation-delay: 0s;
+  -ms-animation-duration: 0.3s;
+  -ms-animation-name: tags--bump;
+  -ms-animation-timing-function: ease-out;
+  -ms-animation-iteration-count: 1;
+  -ms-animation-direction: normal;
+  animation-delay: 0s;
+  animation-duration: 0.3s;
+  animation-name: tags--bump;
+  animation-timing-function: ease-out;
+  animation-iteration-count: 1;
+  animation-direction: normal;
   box-shadow: 0 0 0 1.25rem rgba(0, 152, 255, 0.1) inset;
 }
 .tagify__tag:hover:not([readonly]) {
@@ -5861,7 +5930,36 @@ body.modal-active {
   border: 0.1875rem solid transparent;
   border-radius: 50%;
   opacity: 1;
-  animation: rotateLoader 0.4s infinite linear;
+  -webkit-animation-delay: 0s;
+  -webkit-animation-duration: 0.4s;
+  -webkit-animation-name: rotateLoader;
+  -webkit-animation-timing-function: linear;
+  -webkit-animation-iteration-count: infinite;
+  -webkit-animation-direction: normal;
+  -moz-animation-delay: 0s;
+  -moz-animation-duration: 0.4s;
+  -moz-animation-name: rotateLoader;
+  -moz-animation-timing-function: linear;
+  -moz-animation-iteration-count: infinite;
+  -moz-animation-direction: normal;
+  -o-animation-delay: 0s;
+  -o-animation-duration: 0.4s;
+  -o-animation-name: rotateLoader;
+  -o-animation-timing-function: linear;
+  -o-animation-iteration-count: infinite;
+  -o-animation-direction: normal;
+  -ms-animation-delay: 0s;
+  -ms-animation-duration: 0.4s;
+  -ms-animation-name: rotateLoader;
+  -ms-animation-timing-function: linear;
+  -ms-animation-iteration-count: infinite;
+  -ms-animation-direction: normal;
+  animation-delay: 0s;
+  animation-duration: 0.4s;
+  animation-name: rotateLoader;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+  animation-direction: normal;
 }
 .tagify__tag.tagify--noAnim > div::before {
   animation: none;
@@ -5909,6 +6007,10 @@ body.modal-active {
 .tagify__tag[readonly] > div::before {
   background: linear-gradient(45deg, #e5e5e5 25%, transparent 25%, transparent 50%, #e5e5e5 50%, #e5e5e5 75%, transparent 75%, transparent) 0/5px 5px;
   box-shadow: none;
+  -webkit-filter: brightness(0.95);
+  -moz-filter: brightness(0.95);
+  -o-filter: brightness(0.95);
+  -ms-filter: brightness(0.95);
   filter: brightness(0.95);
 }
 
@@ -5929,6 +6031,10 @@ body.modal-active {
   width: 1.125rem;
   height: 1.125rem;
   margin: 0 0.25rem 0 0;
+  -webkit-transition: 0.2s ease-out;
+  -moz-transition: 0.2s ease-out;
+  -o-transition: 0.2s ease-out;
+  -ms-transition: 0.2s ease-out;
   transition: 0.2s ease-out;
   border-radius: 3.125rem;
   order: 5;
@@ -5967,6 +6073,10 @@ body.modal-active {
   white-space: pre-line;
 }
 .tagify__input:empty::before {
+  -webkit-transition: 0.2s ease-out;
+  -moz-transition: 0.2s ease-out;
+  -o-transition: 0.2s ease-out;
+  -ms-transition: 0.2s ease-out;
   transition: 0.2s ease-out;
   opacity: 0;
   transform: none;
@@ -5976,11 +6086,19 @@ body.modal-active {
   outline: 0;
 }
 .tagify__input:focus::before {
+  -webkit-transition: 0.2s ease-out;
+  -moz-transition: 0.2s ease-out;
+  -o-transition: 0.2s ease-out;
+  -ms-transition: 0.2s ease-out;
   transition: 0.2s ease-out;
   opacity: 0;
   transform: translatex(6px);
 }
 .tagify__input:focus:empty::before {
+  -webkit-transition: 0.2s ease-out;
+  -moz-transition: 0.2s ease-out;
+  -o-transition: 0.2s ease-out;
+  -ms-transition: 0.2s ease-out;
   transition: 0.2s ease-out;
   opacity: 0;
   transform: none;
@@ -6073,10 +6191,22 @@ body.modal-active {
   font-family: "Noto Sans KR", "맑은고딕", "Malgun Gothic", dotum, gulim, sans-serif;
   line-height: 0.5rem;
   pointer-events: none;
+  -webkit-transform: translate(-150%, -50%) scaleX(1.2) rotate(90deg);
+  -moz-transform: translate(-150%, -50%) scaleX(1.2) rotate(90deg);
+  -o-transform: translate(-150%, -50%) scaleX(1.2) rotate(90deg);
+  -ms-transform: translate(-150%, -50%) scaleX(1.2) rotate(90deg);
   transform: translate(-150%, -50%) scaleX(1.2) rotate(90deg);
+  -webkit-transition: 0.2s ease-in-out;
+  -moz-transition: 0.2s ease-in-out;
+  -o-transition: 0.2s ease-in-out;
+  -ms-transition: 0.2s ease-in-out;
   transition: 0.2s ease-in-out;
 }
 .tagify--select[aria-expanded=true]::after {
+  -webkit-transform: translate(-150%, -50%) rotate(270deg) scaleY(1.2);
+  -moz-transform: translate(-150%, -50%) rotate(270deg) scaleY(1.2);
+  -o-transform: translate(-150%, -50%) rotate(270deg) scaleY(1.2);
+  -ms-transform: translate(-150%, -50%) rotate(270deg) scaleY(1.2);
   transform: translate(-150%, -50%) rotate(270deg) scaleY(1.2);
 }
 .tagify--select .tagify__tag {
@@ -6125,17 +6255,29 @@ body.modal-active {
   overflow: hidden;
   background: white;
   box-shadow: 0.0625rem 0.0625rem 0.3125rem 0 #CCCED1;
+  -webkit-transition: 0.25s cubic-bezier(0, 1, 0.5, 1);
+  -moz-transition: 0.25s cubic-bezier(0, 1, 0.5, 1);
+  -o-transition: 0.25s cubic-bezier(0, 1, 0.5, 1);
+  -ms-transition: 0.25s cubic-bezier(0, 1, 0.5, 1);
   transition: 0.25s cubic-bezier(0, 1, 0.5, 1);
 }
 .tagify__dropdown__wrapper:hover {
   overflow: auto;
 }
 .tagify__dropdown--initial[placement=top] .tagify__dropdown__wrapper {
-  transform: translateY(2em);
+  -webkit-transform: translate(0, 2em);
+  -moz-transform: translate(0, 2em);
+  -o-transform: translate(0, 2em);
+  -ms-transform: translate(0, 2em);
+  transform: translate(0, 2em);
 }
 .tagify__dropdown--initial .tagify__dropdown__wrapper {
   max-height: 20px;
-  transform: translateY(-1em);
+  -webkit-transform: translate(0, -1em);
+  -moz-transform: translate(0, -1em);
+  -o-transform: translate(0, -1em);
+  -ms-transform: translate(0, -1em);
+  transform: translate(0, -1em);
 }
 .tagify__dropdown__item {
   position: relative;
@@ -6147,6 +6289,10 @@ body.modal-active {
   outline: 0;
 }
 .tagify__dropdown__item:active {
+  -webkit-filter: brightness(105%);
+  -moz-filter: brightness(105%);
+  -o-filter: brightness(105%);
+  -ms-filter: brightness(105%);
   filter: brightness(105%);
 }
 .tagify__dropdown__item--active {
