--- a/src/main/resources/public/src/scss/document/_layout.scss
+++ b/src/main/resources/public/src/scss/document/_layout.scss
@@ -72,10 +72,12 @@
   }
 
   .token-properties {
-    @include propertiesTemplate;
+    @include fixed($layout-header-height, 0, 0, null);
+    width: $layout-properties-width;
     background-color: $layout-properties-bg-color;
     border-left: $layout-properties-border;
     padding: 0 4.0625rem; // 65px
+    overflow-y: auto;
     // 탭
     .token-info-tab {
       display: flex;
