--- a/src/main/resources/public/src/scss/process/_layout.scss
+++ b/src/main/resources/public/src/scss/process/_layout.scss
@@ -196,13 +196,13 @@
   }
   // element 속성
   &-properties {
-    @include propertiesTemplate;
-    top: calc(#{$layout-header-height} + #{$layout-properties-header-height});
+    @include fixed(calc(#{$layout-header-height} + #{$layout-properties-header-height}), 0, 0, null);
     width: $layout-properties-width;
     background-color: $layout-properties-bg-color;
     border-left: $layout-properties-border;
     box-shadow: $layout-properties-box-shadow;
     overflow-x: hidden;
+    overflow-y: auto;
     @include scrollbarHidden;
 
     // element 명
