--- a/src/main/resources/public/src/scss/template/_alerts.scss
+++ b/src/main/resources/public/src/scss/template/_alerts.scss
@@ -12,12 +12,8 @@
 
   &-wrapper {
     display: none;
+    @include fixed(0, 0, 0, 0);
     overflow: auto;
-    position: fixed;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
 
     &.gmodal-active {
       z-index: $z-index-alert;
@@ -27,11 +23,7 @@
 
   &-backdrop {
     z-index: $z-index-alert;
-    position: fixed;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
+    @include fixed(0, 0, 0, 0);
     background: rgba(116, 147, 179, 0.5);
   }
 
@@ -39,10 +31,7 @@
     z-index: $z-index-alert;
     border: $alert-border;
     border-radius: $alert-border-size;
-    position: absolute;
-    top: 8em;
-    left: 0;
-    right: 0;
+    @include absolute(8em, 0, null, 0);
     width: 100%;
     line-height: 1;
     max-width: 26.875rem;
