--- a/src/main/resources/public/src/scss/theme/default/_layout.scss
+++ b/src/main/resources/public/src/scss/theme/default/_layout.scss
@@ -38,19 +38,19 @@
     height: 100vh;
 
     // 상단 영역
-    @include header();
+    @include defaultHeader();
 
     // 리스트
-    @include listTemplate();
+    @include defaultListTemplate();
 
     // 카드
-    @include cardTemplate();
+    @include defaultCardTemplate();
 
     // edit, register
-    @include editTemplate();
+    @include defaultEditTemplate();
 
     // view
-    @include viewTemplate();
+    @include defaultViewTemplate();
   }
   // 역할, 권한, 코드 화면의 우측 영역
   .aside {
