--- a/src/main/resources/public/template/board/boardArticlesView.html
+++ b/src/main/resources/public/template/board/boardArticlesView.html
@@ -12,7 +12,7 @@
         <div class="board-header">
             <div class="header-title flex-row align-items-baseline">
                 <h1 th:text="#{board.label.board}"></h1>
-                <h6 class="description" th:text="#{board.msg.viewDescription}"></h6>
+                <h6 class="description ml-2" th:text="#{board.msg.viewDescription}"></h6>
             </div>
         </div>
         <div class="board-content-view">
