--- a/src/main/resources/public/template/board/boardView.html
+++ b/src/main/resources/public/template/board/boardView.html
@@ -11,7 +11,7 @@
         <div class="board-admin-header">
             <div class="header-title flex-row align-items-baseline">
                 <h1 th:text="#{board.label.board}"></h1>
-                <h6 class="description" th:text="#{board.msg.adminViewDescription}"></h6>
+                <h6 class="description ml-2" th:text="#{board.msg.adminViewDescription}"></h6>
             </div>
         </div>
         <div class="board-admin-content-edit">
