--- a/src/main/resources/public/template/chart/chartSearch.html
+++ b/src/main/resources/public/template/chart/chartSearch.html
@@ -11,7 +11,7 @@
     <div class="chart-header">
         <div class="header-title flex-row align-items-baseline">
             <h1 th:text="#{chart.label.chartList}"></h1>
-            <h6 class="description" th:text="#{chart.msg.searchDescription}"></h6>
+            <h6 class="description ml-2" th:text="#{chart.msg.searchDescription}"></h6>
         </div>
         <div class="header-search flex-row">
             <input type="hidden" sec:authorize="hasAuthority('chart.create') || hasAuthority('chart.update')"
@@ -23,7 +23,7 @@
                     <option value="" th:text="#{chart.label.all}" selected></option>
                     <option th:each="type:${typeList}" th:value="${type.codeValue}" th:text="${type.codeName}"></option>
                 </select>
-                <span id="spanTotalCount" class="txt-num"></span>
+                <span id="spanTotalCount" class="search-count"></span>
             </form>
             <div class="ml-auto">
                 <button type="button" class="default-fill" sec:authorize="hasAuthority('chart.create')"
