--- a/src/main/resources/public/template/cmdb/attribute/attributeSearch.html
+++ b/src/main/resources/public/template/cmdb/attribute/attributeSearch.html
@@ -11,7 +11,7 @@
     <div class="cmdb-attribute-header">
         <div class="header-title flex-row align-items-baseline">
             <h1 th:text="#{cmdb.attribute.label.management}"></h1>
-            <h6 class="description" th:text="#{cmdb.attribute.msg.searchDescription}"></h6>
+            <h6 class="description ml-2" th:text="#{cmdb.attribute.msg.searchDescription}"></h6>
         </div>
         <div class="header-search flex-row">
             <input type="hidden" sec:authorize="hasAuthority('cmdb.attribute.create') || hasAuthority('cmdb.attribute.update')" th:name="isRole"
@@ -21,7 +21,7 @@
             <form id="searchFrm">
                 <input class="search col-5 mr-2" id="search" name="search" type="text" maxlength="100"
                        th:placeholder="#{cmdb.attribute.label.searchPlaceholder}"/>
-                <span id="spanTotalCount" class="txt-num"></span>
+                <span id="spanTotalCount" class="search-count"></span>
             </form>
             <div class="ml-auto">
                 <button type="button" class="default-fill" onclick="location.href='/cmdb/attributes/new'"
