--- a/src/main/resources/public/template/cmdb/attribute/attributeView.html
+++ b/src/main/resources/public/template/cmdb/attribute/attributeView.html
@@ -12,7 +12,7 @@
         <div class="cmdb-attribute-header">
             <div class="header-title flex-row align-items-baseline">
                 <h1 th:text="#{cmdb.attribute.label.view}"></h1>
-                <h6 class="description" th:text="#{cmdb.attribute.msg.viewDescription}"></h6>
+                <h6 class="description ml-2" th:text="#{cmdb.attribute.msg.viewDescription}"></h6>
             </div>
         </div>
         <div class="cmdb-attribute-content-edit">
