--- a/src/main/resources/public/template/cmdb/ci/ciSearch.html
+++ b/src/main/resources/public/template/cmdb/ci/ciSearch.html
@@ -11,7 +11,7 @@
     <div class="cmdb-ci-header">
         <div class="header-title flex-row align-items-baseline">
             <h1 th:text="#{cmdb.ci.label.ciInquiry}"></h1>
-            <h6 class="description" th:text="#{cmdb.ci.msg.searchDescription}"></h6>
+            <h6 class="description ml-2" th:text="#{cmdb.ci.msg.searchDescription}"></h6>
         </div>
         <div class="header-search flex-row">
             <input type="hidden" sec:authorize="hasAuthority('cmdb.ci.create') || hasAuthority('cmdb.ci.update')"
@@ -24,7 +24,7 @@
                 <input class="search col-3 mr-2" id="tagSearch" name="tagSearch" type="text" maxlength="100"
                        th:placeholder="#{cmdb.ci.label.tagPlaceholder}"/>
                 <input type="hidden" id="flag" name="flag" value="itsm"/>
-                <span id="spanTotalCount" class="txt-num"></span>
+                <span id="spanTotalCount" class="search-count"></span>
             </form>
         </div>
     </div>
