--- a/src/main/resources/public/template/custom-code/customCodeSearch.html
+++ b/src/main/resources/public/template/custom-code/customCodeSearch.html
@@ -12,7 +12,7 @@
     <div class="custom-code-header">
         <div class="header-title flex-row align-items-baseline">
             <h1 th:text="#{customCode.label.customCode}"></h1>
-            <h6 class="description" th:text="#{customCode.msg.searchDescription}"></h6>
+            <h6 class="description ml-2" th:text="#{customCode.msg.searchDescription}"></h6>
         </div>
         <div class="header-search flex-row">
             <input type="hidden" sec:authorize="hasAuthority('custom.code.update')" th:name="isRole" th:value="true"/>
@@ -24,7 +24,7 @@
                 </select>
                 <input type="text" class="search col-4 mr-2" id="search" name="search" maxlength="100"
                        th:placeholder="#{customCode.label.searchPlaceholder}"/>
-                <span id="spanTotalCount" class="txt-num"></span>
+                <span id="spanTotalCount" class="search-count"></span>
             </form>
             <div class="ml-auto">
                 <button type="button" class="default-fill" onclick="location.href='/custom-codes/new'"
