--- a/src/main/resources/public/template/custom-code/customCodeView.html
+++ b/src/main/resources/public/template/custom-code/customCodeView.html
@@ -11,7 +11,7 @@
         <div class="custom-code-header">
             <div class="header-title flex-row align-items-baseline">
                 <h1 th:text="#{customCode.label.customCode}"></h1>
-                <h6 class="description" th:text="#{customCode.msg.viewDescription}"></h6>
+                <h6 class="description ml-2" th:text="#{customCode.msg.viewDescription}"></h6>
             </div>
         </div>
         <div class="custom-code-content-edit">
