--- a/src/main/resources/public/template/dashboard/dashboardView.html
+++ b/src/main/resources/public/template/dashboard/dashboardView.html
@@ -10,7 +10,7 @@
     <div class="dashboard-header">
         <div class="header-title flex-row align-items-baseline">
             <h1 th:text="#{token.label.list}"></h1>
-            <h6 class="description" th:text="#{dashboard.msg.viewDescription}"></h6>
+            <h6 class="description ml-2" th:text="#{dashboard.msg.viewDescription}"></h6>
         </div>
     </div>
     <div class="dashboard-content flex-fill">
