--- a/src/main/resources/public/template/faq/faqEdit.html
+++ b/src/main/resources/public/template/faq/faqEdit.html
@@ -12,7 +12,7 @@
         <div class="faq-header">
             <div class="header-title flex-row align-items-baseline">
                 <h1 th:text="#{faq.label.faq}"></h1>
-                <h6 class="description" th:text="#{faq.msg.editDescription}"></h6>
+                <h6 class="description ml-2" th:text="#{faq.msg.editDescription}"></h6>
             </div>
         </div>
         <div class="faq-content-edit">
