--- a/src/main/resources/public/template/faq/faqSearch.html
+++ b/src/main/resources/public/template/faq/faqSearch.html
@@ -11,13 +11,13 @@
     <div class="faq-header">
         <div class="header-title flex-row align-items-baseline">
             <h1 th:text="#{faq.label.faq}"></h1>
-            <h6 class="description" th:text="#{faq.msg.searchDescription}"></h6>
+            <h6 class="description ml-2" th:text="#{faq.msg.searchDescription}"></h6>
         </div>
         <div class="header-search flex-row">
             <form id="searchFrm">
                 <input class="search col-5 mr-2" id="search" name="search" type="text" maxlength="100"
                        th:placeholder="#{faq.label.searchPlaceholder}"/>
-                <span id="spanTotalCount" class="txt-num"></span>
+                <span id="spanTotalCount" class="search-count"></span>
             </form>
             <div class="ml-auto">
                 <button type="button" class="default-fill" onclick="location.href='/faqs/new'"
