--- a/src/main/resources/public/template/notice/noticeSearch.html
+++ b/src/main/resources/public/template/notice/noticeSearch.html
@@ -11,7 +11,7 @@
     <div class="notice-header">
         <div class="header-title flex-row align-items-baseline">
             <h1 th:text="#{notice.label.notice}"></h1>
-            <h6 class="description" th:text="#{notice.msg.searchDescription}"></h6>
+            <h6 class="description ml-2" th:text="#{notice.msg.searchDescription}"></h6>
         </div>
         <div class="header-search flex-row">
             <input type="hidden" name="isRole" sec:authorize="hasAuthority('notice.update')" th:value="true"/>
@@ -23,7 +23,7 @@
                 <span>~</span>
                 <input class="search-date col-3 mr-2" type="text" id="searchToDt" name="searchToDt"/>
                 <input class="search-date" type="hidden" id="toDt" name="toDt" readonly="readonly"/>
-                <span id="spanTotalCount" class="txt-num"></span>
+                <span id="spanTotalCount" class="search-count"></span>
             </form>
             <div class="ml-auto">
                 <button type="button" class="default-fill" onclick="location.href='/notices/new'"
