--- a/src/main/resources/public/template/portal/download/downloadSearch.html
+++ b/src/main/resources/public/template/portal/download/downloadSearch.html
@@ -11,7 +11,7 @@
     <div class="download-header">
         <div class="header-title flex-row align-items-baseline">
             <h1 th:text="#{download.label.download}"></h1>
-            <h6 class="description" th:text="#{download.msg.portalDescription}"></h6>
+            <h6 class="description ml-2" th:text="#{download.msg.portalDescription}"></h6>
         </div>
         <div class="download-search">
             <form id="searchFrm">
@@ -24,7 +24,7 @@
                 <span>~</span>
                 <input class="search-date icon-date col-3 mr-2" type="text" id="searchToDt" name="searchToDt"/>
                 <input class="search-date icon-date" type="hidden" id="toDt" name="toDt" readonly="readonly"/>
-                <span id="spanTotalCount" class="txt-num"></span>
+                <span id="spanTotalCount" class="search-count"></span>
             </form>
         </div>
     </div>
