--- a/src/main/resources/public/template/portal/download/downloadView.html
+++ b/src/main/resources/public/template/portal/download/downloadView.html
@@ -11,7 +11,7 @@
     <div class="download-header">
         <div class="header-title flex-row align-items-baseline">
             <h1 th:text="#{download.label.download}"></h1>
-            <h6 class="description" th:text="#{download.msg.viewDescription}"></h6>
+            <h6 class="description ml-2" th:text="#{download.msg.viewDescription}"></h6>
         </div>
     </div>
     <div class="download-content">
