--- a/src/main/resources/public/template/process/processSearch.html
+++ b/src/main/resources/public/template/process/processSearch.html
@@ -12,14 +12,14 @@
     <div class="process-header">
         <div class="header-title flex-row align-items-baseline">
             <h1 th:text="#{process.label.process}"></h1>
-            <h6 class="description" th:text="#{process.msg.searchDescription}"></h6>
+            <h6 class="description ml-2" th:text="#{process.msg.searchDescription}"></h6>
         </div>
         <div class="header-search flex-row">
             <input type="hidden" id="updatable" th:value="${#authorization.expression('hasAuthority(''process.update'')')}"/>
             <form id="searchFrm">
                 <input type="text" id="search" name="search" class="search col-5 mr-2"  maxlength="100"
                        th:placeholder="#{process.label.searchPlaceholder}"/>
-                <span id="spanTotalCount" class="txt-num"></span>
+                <span id="spanTotalCount" class="search-count"></span>
             </form>
             <div class="ml-auto">
                 <button type="button" class="default-line" onclick="openProcessImport();"
