--- a/src/main/resources/public/template/scheduler/schedulerView.html
+++ b/src/main/resources/public/template/scheduler/schedulerView.html
@@ -12,7 +12,7 @@
         <div class="scheduler-header">
             <div class="header-title flex-row align-items-baseline">
                 <h1 th:text="#{scheduler.label.schedule}"></h1>
-                <h6 class="description" th:text="#{scheduler.msg.scheduleDescription}"></h6>
+                <h6 class="description ml-2" th:text="#{scheduler.msg.scheduleDescription}"></h6>
             </div>
         </div>
         <div class="scheduler-content-edit">
