--- a/src/main/resources/public/template/token/tokenSearch.html
+++ b/src/main/resources/public/template/token/tokenSearch.html
@@ -11,7 +11,7 @@
     <div class="token-header">
         <div class="header-title flex-row align-items-baseline" id="header-title">
             <h1 th:text="#{token.label.list}"></h1>
-            <h6 class="description" th:text="#{token.msg.searchDescription}"></h6>
+            <h6 class="description ml-2" th:text="#{token.msg.searchDescription}"></h6>
         </div>
         <div class="header-search flex-row" id="header-search">
             <form id="frmSearch">
@@ -34,7 +34,7 @@
                        readonly="readonly"/>
                 <input class="search col-3 mr-2" type="text" name="searchTags" id="searchTags"
                        maxlength="100" th:placeholder="#{token.label.tagPlaceHolder}"/>
-                <span id="spanTotalCount" class="txt-num"></span>
+                <span id="spanTotalCount" class="search-count"></span>
             </form>
         </div>
     </div>
