--- a/src/main/resources/public/template/workflow/workFlowSearch.html
+++ b/src/main/resources/public/template/workflow/workFlowSearch.html
@@ -11,7 +11,7 @@
     <div class="document-admin-header">
         <div class="header-title flex-row align-items-baseline">
             <h1 th:text="#{document.label.businessFlow}"></h1>
-            <h6 class="description" th:text="#{document.msg.adminSearchDescription}"></h6>
+            <h6 class="description ml-2" th:text="#{document.msg.adminSearchDescription}"></h6>
         </div>
         <div class="header-search flex-row">
             <input type="hidden" id="updatable" th:value="${#authorization.expression('hasAuthority(''document.admin.update'')')}"/>
@@ -30,7 +30,7 @@
                 <label for="searchFormName"></label>
                 <input type="text" class="search mr-2" maxlength="100" id="searchFormName"
                        name="searchFormName" th:placeholder="#{document.label.form}"/>
-                <span id="spanTotalCount" class="txt-num"></span>
+                <span id="spanTotalCount" class="search-count"></span>
             </form>
             <div class="ml-auto">
                 <button type="button" class="default-fill" onclick="openDocumentEdit();"
