#10114 CMDB_CI 테이블 필드 수정 1. CMDB_CI 테이블의 class_id, ci_icon 제거 2. CMDB_TYPE 테이블의 default_class_id 를 class_id 로 변경 3. defaultCIClass와 같이 default 붙은 변수 관련 수정 4. CI 등록시 아이콘도 type에 따라 자동 선택되고.. 변경 불가능하게 수정

--- a/src/main/resources/public/template/cmdb/type/typeEdit.html
+++ b/src/main/resources/public/template/cmdb/type/typeEdit.html
@@ -127,16 +127,16 @@
                     callbackFunc: function(response) {
                         let responseJson = JSON.parse(response.responseText);
                         document.getElementById('parentTypeName').setAttribute('disabled','');
-                        document.getElementById('parentTypeName').value = responseJson.ptypeName;
-                        document.getElementById('parentTypeId').value = responseJson.ptypeId;
+                        document.getElementById('parentTypeName').value = responseJson.pTypeName;
+                        document.getElementById('parentTypeId').value = responseJson.pTypeId;
                         document.getElementById('typeName').value = responseJson.typeName;
                         document.getElementById('typeId').value = responseJson.typeId;
                         document.getElementById('typeDesc').value = responseJson.typeDesc;
                         document.getElementById('typeAlias').value = responseJson.typeAlias;
                         document.getElementById('typeIcon').value = responseJson.typeIcon;
-                        document.getElementById('typeClassId').value = responseJson.defaultClassId;
-                        document.getElementById('typeClass').value = responseJson.defaultClassName;
-                        if (responseJson.ptypeId !== null) {
+                        document.getElementById('typeClassId').value = responseJson.classId;
+                        document.getElementById('typeClass').value = responseJson.className;
+                        if (responseJson.pTypeId !== null) {
                             document.querySelector('#btnUpdate').removeAttribute('disabled');
                             document.querySelector('#btnDelete').removeAttribute('disabled');
                             document.querySelector('button[name=typeIconSelector]').removeAttribute('disabled');
@@ -206,8 +206,8 @@
                 typeAlias: document.getElementById('typeAlias').value,
                 typeDesc: document.getElementById('typeDesc').value,
                 typeIcon: document.getElementById('typeIcon').value,
-                defaultClassId: document.getElementById('typeClassId').value,
-                defaultClassName: document.getElementById('typeClass').value,
+                classId: document.getElementById('typeClassId').value,
+                className: document.getElementById('typeClass').value,
                 typeLevel: document.getElementById('typeLevel').value
             };
             if (jsonData.pTypeId === null || jsonData.pTypeId.trim() === '') {
