--- a/src/main/resources/public/assets/css/formRefactoring.css
+++ b/src/main/resources/public/assets/css/formRefactoring.css
@@ -576,9 +576,33 @@ input, button, select, optgroup, textarea {
 .form-header .name {
   font-size: 1.125rem;
 }
-.form-header .control-box {
+.form-header .buttons {
   width: 20rem;
   padding: 0 0.75rem;
+}
+.form-header .buttons .dropdown-content {
+  visibility: hidden;
+  background-color: white;
+  color: #33ADFF;
+  text-align: center;
+  font-size: 1.125rem;
+  margin: 0.6875rem 0 0 0;
+  position: absolute;
+  z-index: 500;
+  box-shadow: 0 0 0.9375rem 0 rgba(204, 206, 209, 0.5);
+}
+.form-header .buttons .dropdown-item {
+  padding: 0.6875rem 0.875rem;
+}
+.form-header .buttons .dropdown-item:hover {
+  background-color: rgba(235, 235, 235, 0.3);
+}
+.form-header .buttons .btn-dropdown:hover > .dropdown-content {
+  visibility: visible;
+  display: block;
+}
+.form-header .buttons .btn-dropdown:hover:last-child > .dropdown-content {
+  right: 0.75rem;
 }
 .form-component-palette {
   position: fixed;
@@ -2054,7 +2078,7 @@ button.ghost-line:disabled .icon {
 }
 
 .btn-header {
-  width: 1.5rem;
+  width: 1.625rem;
   height: 3.125rem;
   padding: 0;
   border-radius: 0;
