--- a/src/main/resources/public/src/scss/formRefactoring/_variables.scss
+++ b/src/main/resources/public/src/scss/formRefactoring/_variables.scss
@@ -5,10 +5,14 @@
 //////////////////////////// layout ////////////////////////////
 // header
 $layout-header-height:                             3.125rem; // 50px
+$layout-header-padding:                            0.75rem; // 12px
 $layout-header-font-size:                          $font-size-base * 1.125; // 18px
 $layout-header-font-color:                         $white;
 $layout-header-font-weight:                        $font-weight-medium;
 $layout-header-bg-color:                           $blue;
+$layout-header-dropdown-bg-color:                  white;
+$layout-header-dropdown-hover-bg-color:            rgba(235, 235, 235, 0.3);
+$layout-header-box-shadow:                         0 0 0.9375rem 0 rgba(204, 206, 209, 0.5);
 
 // component palette
 $layout-component-palette-width:                   12.5rem; // 200px
