--- a/src/main/resources/public/template/formRefactoring/formDesigner.html
+++ b/src/main/resources/public/template/formRefactoring/formDesigner.html
@@ -56,7 +56,7 @@
                 <img class="logo" th:src="@{/assets/media/icons/formRefactoring/topmenu/icon_form_designer.svg}" width="169" height="25" alt="Form Designer" />
                 <span class="name ml-auto mr-auto" id="formName"></span>
                 <!--버튼 영역-->
-                <div class="control-box">
+                <div class="buttons flex-row">
                     <!--실행 취소-->
                     <th:block th:if="${#strings.isEmpty(isView)}">
                         <button type="button" id="btnUndo" class="btn-header header-tooltip">
@@ -68,38 +68,48 @@
                     </th:block>
                     <!--재실행(드롭다운)-->
                     <th:block th:if="${#strings.isEmpty(isView)}">
-                        <button type="button" id="btnRedo" class="btn-header btn-dropdown">
+                        <button type="button" class="btn-header btn-dropdown">
                             <span class="icon-dropdown"></span>
-                            <div class="tooltip-contents">
-<!--                                <span th:text="#{form.label.redo}"></span>-->
-                            </div>
+                            <ul class="dropdown-content">
+                                <li class="dropdown-item align-left" id="btnUndo">
+                                    <span th:text="#{form.label.undo}"></span>
+                                </li>
+                                <li class="dropdown-item align-left" id="btnRedo">
+                                    <span th:text="#{form.label.redo}"></span>
+                                </li>
+                            </ul>
                         </button>
                     </th:block>
-                    <!--다른 이름으로 저장(드롭다운)-->
-                    <th:block sec:authorize="hasAnyAuthority('form.create', 'form.update')">
-                        <button type="button" id="btnSaveAs" class="btn-header btn-dropdown float-right">
-                            <span class="icon-dropdown"></span>
-                            <div class="tooltip-contents">
-<!--                                <span th:text="#{common.btn.saveAs}"></span>-->
-                            </div>
-                        </button>
-                    </th:block>
+                    <!--미리보기-->
+                    <button type="button" id="btnPreview" class="btn-header header-tooltip ml-auto">
+                        <span class="icon-preview"></span>
+                        <div class="tooltip-contents">
+                            <span th:text="#{form.label.preview}"></span>
+                        </div>
+                    </button>
                     <!--저장하기-->
                     <th:block th:if="${#strings.isEmpty(isView)}" sec:authorize="hasAuthority('form.create')">
-                        <button type="button" id="btnSave" class="btn-header header-tooltip float-right">
+                        <button type="button" id="btnSave" class="btn-header header-tooltip">
                             <span class="icon-save"></span>
                             <div class="tooltip-contents">
                                 <span th:text="#{common.btn.save}"></span>
                             </div>
                         </button>
                     </th:block>
-                    <!--미리보기-->
-                    <button type="button" id="btnPreview" class="btn-header header-tooltip float-right">
-                        <span class="icon-preview"></span>
-                        <div class="tooltip-contents">
-                            <span th:text="#{form.label.preview}"></span>
-                        </div>
-                    </button>
+                    <!--다른 이름으로 저장(드롭다운)-->
+                    <th:block sec:authorize="hasAnyAuthority('form.create', 'form.update')">
+                        <button type="button" class="btn-header btn-dropdown">
+                            <span class="icon-dropdown"></span>
+                            <ul class="dropdown-content">
+                                <li class="dropdown-item align-left">
+                                    <span th:text="#{common.btn.save}" id="btnSave"></span>
+                                </li>
+                                <li class="dropdown-item align-left">
+                                    <span th:text="#{common.btn.saveAs}" id="btnSaveAs"></span>
+                                </li>
+                            </ul>
+                        </button>
+                    </th:block>
                 </div>
             </div>
             <!-- 컴포넌트 팔레트 -->
