#10553 [SCSS 개선] mixins, function 리팩터링 검토 : color picker 믹스인 삭제

--- a/src/main/resources/public/src/scss/document/_layout.scss
+++ b/src/main/resources/public/src/scss/document/_layout.scss
@@ -228,7 +228,7 @@
               &-row {
                 color: map-get($grays, "dark");
                 margin-top: 0.625rem; // 10px
-                word-break: break-word;
+                @include wordWrap(break-word);
                 &-info {
                   .user-name { color: map-get($grays, "dark"); }
                   .user-date-time { 
