--- a/src/main/resources/public/assets/css/document2.css
+++ b/src/main/resources/public/assets/css/document2.css
@@ -155,6 +155,18 @@ input, button, select, optgroup, textarea {
   display: inline-flex !important;
 }
 
+.flex-nowrap {
+  flex-wrap: nowrap;
+}
+
+.flex-wrap {
+  flex-wrap: wrap;
+}
+
+.flex-wrap-r {
+  flex-wrap: wrap-reverse;
+}
+
 .justify-content-start {
   justify-content: flex-start !important;
 }
@@ -321,100 +333,188 @@ input, button, select, optgroup, textarea {
   padding: 0;
 }
 
-.pl-0 {
-  padding-left: 0;
+.pt-1 {
+  padding-top: 0.3125rem;
 }
 
-.pr-0 {
-  padding-right: 0;
+.pl-1 {
+  padding-left: 0.3125rem;
+}
+
+.pb-1 {
+  padding-bottom: 0.3125rem;
+}
+
+.pr-1 {
+  padding-right: 0.3125rem;
+}
+
+.pt-2 {
+  padding-top: 0.625rem;
+}
+
+.pl-2 {
+  padding-left: 0.625rem;
+}
+
+.pb-2 {
+  padding-bottom: 0.625rem;
+}
+
+.pr-2 {
+  padding-right: 0.625rem;
+}
+
+.pt-3 {
+  padding-top: 0.9375rem;
+}
+
+.pl-3 {
+  padding-left: 0.9375rem;
+}
+
+.pb-3 {
+  padding-bottom: 0.9375rem;
+}
+
+.pr-3 {
+  padding-right: 0.9375rem;
+}
+
+.pt-4 {
+  padding-top: 1.25rem;
+}
+
+.pl-4 {
+  padding-left: 1.25rem;
+}
+
+.pb-4 {
+  padding-bottom: 1.25rem;
+}
+
+.pr-4 {
+  padding-right: 1.25rem;
+}
+
+.pt-5 {
+  padding-top: 1.5625rem;
+}
+
+.pl-5 {
+  padding-left: 1.5625rem;
+}
+
+.pb-5 {
+  padding-bottom: 1.5625rem;
+}
+
+.pr-5 {
+  padding-right: 1.5625rem;
 }
 
 .m-0 {
   margin: 0;
 }
 
-.ml-0 {
-  margin-left: 0;
-}
-
-.ml-1 {
-  margin-left: 0.3125rem;
-}
-
-.ml-2 {
-  margin-left: 0.625rem;
-}
-
-.ml-3 {
-  margin-left: 0.9375rem;
-}
-
-.ml-4 {
-  margin-left: 1.25rem;
-}
-
-.ml-5 {
-  margin-left: 1.875rem;
-}
-
-.ml-auto {
-  margin-left: auto;
-}
-
-.mr-0 {
-  margin-right: 0;
-}
-
-.mr-1 {
-  margin-right: 0.3125rem;
-}
-
-.mr-2 {
-  margin-right: 0.625rem;
-}
-
-.mr-3 {
-  margin-right: 0.9375rem;
-}
-
-.mr-4 {
-  margin-right: 1.25rem;
-}
-
-.mr-5 {
-  margin-right: 1.875rem;
-}
-
-.mr-auto {
-  margin-right: auto;
-}
-
-.mt-0 {
-  margin-top: 0;
+.m-auto {
+  margin: auto;
 }
 
 .mt-1 {
   margin-top: 0.3125rem;
 }
 
+.ml-1 {
+  margin-left: 0.3125rem;
+}
+
+.mb-1 {
+  margin-bottom: 0.3125rem;
+}
+
+.mr-1 {
+  margin-right: 0.3125rem;
+}
+
 .mt-2 {
   margin-top: 0.625rem;
+}
+
+.ml-2 {
+  margin-left: 0.625rem;
+}
+
+.mb-2 {
+  margin-bottom: 0.625rem;
+}
+
+.mr-2 {
+  margin-right: 0.625rem;
 }
 
 .mt-3 {
   margin-top: 0.9375rem;
 }
 
+.ml-3 {
+  margin-left: 0.9375rem;
+}
+
+.mb-3 {
+  margin-bottom: 0.9375rem;
+}
+
+.mr-3 {
+  margin-right: 0.9375rem;
+}
+
 .mt-4 {
   margin-top: 1.25rem;
 }
 
+.ml-4 {
+  margin-left: 1.25rem;
+}
+
+.mb-4 {
+  margin-bottom: 1.25rem;
+}
+
+.mr-4 {
+  margin-right: 1.25rem;
+}
+
 .mt-5 {
-  margin-top: 1.875rem;
+  margin-top: 1.5625rem;
+}
+
+.ml-5 {
+  margin-left: 1.5625rem;
+}
+
+.mb-5 {
+  margin-bottom: 1.5625rem;
+}
+
+.mr-5 {
+  margin-right: 1.5625rem;
 }
 
 .mt-auto {
   margin-top: auto;
+}
+
+.ml-auto {
+  margin-left: auto;
+}
+
+.mb-auto {
+  margin-bottom: auto;
+}
+
+.mr-auto {
+  margin-right: auto;
 }
 
 /* _fonts.scss
@@ -491,14 +591,6 @@ input, button, select, optgroup, textarea {
   white-space: nowrap;
   overflow: hidden;
   word-wrap: normal;
-}
-
-.auto-break {
-  word-break: break-all;
-}
-
-.space-line {
-  white-space: pre-line;
 }
 
 .horizontal-bar {
@@ -692,17 +784,17 @@ input[type=range]::-webkit-slider-thumb {
   appearance: none;
   width: 1.125rem;
   height: 1.125rem;
-  background-color: #ffffff;
   border: 0.0625rem solid #EBEBEB;
   border-radius: 50%;
+  background: #ffffff;
   cursor: pointer;
 }
 input[type=range]::-moz-range-thumb {
   width: 1.125rem;
   height: 1.125rem;
-  background-color: #ffffff;
   border: 0.0625rem solid #EBEBEB;
   border-radius: 50%;
+  background: #ffffff;
   cursor: pointer;
 }
 
