--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -154,6 +154,18 @@ input, button, select, optgroup, textarea {
   display: inline-flex !important;
 }
 
+.flex-nowrap {
+  flex-wrap: nowrap;
+}
+
+.flex-wrap {
+  flex-wrap: wrap;
+}
+
+.flex-wrap-r {
+  flex-wrap: wrap-reverse;
+}
+
 .justify-content-start {
   justify-content: flex-start !important;
 }
@@ -320,100 +332,188 @@ input, button, select, optgroup, textarea {
   padding: 0;
 }
 
-.pl-0 {
-  padding-left: 0;
+.pt-1 {
+  padding-top: 0.3125rem;
 }
 
-.pr-0 {
-  padding-right: 0;
+.pl-1 {
+  padding-left: 0.3125rem;
+}
+
+.pb-1 {
+  padding-bottom: 0.3125rem;
+}
+
+.pr-1 {
+  padding-right: 0.3125rem;
+}
+
+.pt-2 {
+  padding-top: 0.625rem;
+}
+
+.pl-2 {
+  padding-left: 0.625rem;
+}
+
+.pb-2 {
+  padding-bottom: 0.625rem;
+}
+
+.pr-2 {
+  padding-right: 0.625rem;
+}
+
+.pt-3 {
+  padding-top: 0.9375rem;
+}
+
+.pl-3 {
+  padding-left: 0.9375rem;
+}
+
+.pb-3 {
+  padding-bottom: 0.9375rem;
+}
+
+.pr-3 {
+  padding-right: 0.9375rem;
+}
+
+.pt-4 {
+  padding-top: 1.25rem;
+}
+
+.pl-4 {
+  padding-left: 1.25rem;
+}
+
+.pb-4 {
+  padding-bottom: 1.25rem;
+}
+
+.pr-4 {
+  padding-right: 1.25rem;
+}
+
+.pt-5 {
+  padding-top: 1.5625rem;
+}
+
+.pl-5 {
+  padding-left: 1.5625rem;
+}
+
+.pb-5 {
+  padding-bottom: 1.5625rem;
+}
+
+.pr-5 {
+  padding-right: 1.5625rem;
 }
 
 .m-0 {
   margin: 0;
 }
 
-.ml-0 {
-  margin-left: 0;
-}
-
-.ml-1 {
-  margin-left: 0.3125rem;
-}
-
-.ml-2 {
-  margin-left: 0.625rem;
-}
-
-.ml-3 {
-  margin-left: 0.9375rem;
-}
-
-.ml-4 {
-  margin-left: 1.25rem;
-}
-
-.ml-5 {
-  margin-left: 1.875rem;
-}
-
-.ml-auto {
-  margin-left: auto;
-}
-
-.mr-0 {
-  margin-right: 0;
-}
-
-.mr-1 {
-  margin-right: 0.3125rem;
-}
-
-.mr-2 {
-  margin-right: 0.625rem;
-}
-
-.mr-3 {
-  margin-right: 0.9375rem;
-}
-
-.mr-4 {
-  margin-right: 1.25rem;
-}
-
-.mr-5 {
-  margin-right: 1.875rem;
-}
-
-.mr-auto {
-  margin-right: auto;
-}
-
-.mt-0 {
-  margin-top: 0;
+.m-auto {
+  margin: auto;
 }
 
 .mt-1 {
   margin-top: 0.3125rem;
 }
 
+.ml-1 {
+  margin-left: 0.3125rem;
+}
+
+.mb-1 {
+  margin-bottom: 0.3125rem;
+}
+
+.mr-1 {
+  margin-right: 0.3125rem;
+}
+
 .mt-2 {
   margin-top: 0.625rem;
+}
+
+.ml-2 {
+  margin-left: 0.625rem;
+}
+
+.mb-2 {
+  margin-bottom: 0.625rem;
+}
+
+.mr-2 {
+  margin-right: 0.625rem;
 }
 
 .mt-3 {
   margin-top: 0.9375rem;
 }
 
+.ml-3 {
+  margin-left: 0.9375rem;
+}
+
+.mb-3 {
+  margin-bottom: 0.9375rem;
+}
+
+.mr-3 {
+  margin-right: 0.9375rem;
+}
+
 .mt-4 {
   margin-top: 1.25rem;
 }
 
+.ml-4 {
+  margin-left: 1.25rem;
+}
+
+.mb-4 {
+  margin-bottom: 1.25rem;
+}
+
+.mr-4 {
+  margin-right: 1.25rem;
+}
+
 .mt-5 {
-  margin-top: 1.875rem;
+  margin-top: 1.5625rem;
+}
+
+.ml-5 {
+  margin-left: 1.5625rem;
+}
+
+.mb-5 {
+  margin-bottom: 1.5625rem;
+}
+
+.mr-5 {
+  margin-right: 1.5625rem;
 }
 
 .mt-auto {
   margin-top: auto;
+}
+
+.ml-auto {
+  margin-left: auto;
+}
+
+.mb-auto {
+  margin-bottom: auto;
+}
+
+.mr-auto {
+  margin-right: auto;
 }
 
 /* _fonts.scss
@@ -490,14 +590,6 @@ input, button, select, optgroup, textarea {
   white-space: nowrap;
   overflow: hidden;
   word-wrap: normal;
-}
-
-.auto-break {
-  word-break: break-all;
-}
-
-.space-line {
-  white-space: pre-line;
 }
 
 .horizontal-bar {
@@ -641,17 +733,17 @@ input[type=range]::-webkit-slider-thumb {
   appearance: none;
   width: 1.125rem;
   height: 1.125rem;
-  background-color: #ffffff;
   border: 0.0625rem solid #EBEBEB;
   border-radius: 50%;
+  background: #ffffff;
   cursor: pointer;
 }
 input[type=range]::-moz-range-thumb {
   width: 1.125rem;
   height: 1.125rem;
-  background-color: #ffffff;
   border: 0.0625rem solid #EBEBEB;
   border-radius: 50%;
+  background: #ffffff;
   cursor: pointer;
 }
 
@@ -2077,6 +2169,14 @@ button .icon-plus {
   color: #586872;
   min-height: 13.4375rem;
   padding: 0.3125rem 1.25rem;
+}
+.itsm-container .main .view-content pre {
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  white-space: pre-line;
+  white-space: -o-pre-wrap;
+  white-space: -moz-pre-wrap;
+  word-break: break-all;
 }
 .itsm-container .main .view-content .view-text {
   margin: 0;
@@ -4552,29 +4652,28 @@ span.modal_node_selected label {
   width: 1.75rem;
   height: 1.75rem;
   margin: 0.3125rem;
-  border: transparent;
+  border: 0.1875rem solid transparent;
   cursor: pointer;
 }
 .color-picker .color-input .selected-color-box {
+  display: flex;
   width: 2.5rem;
   height: 2.5rem;
   margin-right: 0.3125rem;
   border: 0.0625rem solid #EBEBEB;
-  display: flex;
 }
 .color-picker .color-input .selected-color-box:hover {
   border: 0.0625rem solid #0098FF;
 }
-
 .color-picker .color-palette {
   display: flex;
   flex-wrap: wrap;
   justify-content: flex-start;
-  background-color: #ffffff;
   width: 30rem;
-  margin-top: 0.3125rem;
   padding: 1.25rem 0 0.625rem 1.25rem;
+  margin-top: 0.3125rem;
   border: 0.0625rem solid #EBEBEB;
+  background-color: #ffffff;
 }
 .color-picker .color-palette div {
   display: inline-block;
@@ -4587,6 +4686,66 @@ span.modal_node_selected label {
 .color-picker .color-palette div.selected {
   border: 0.375rem solid #ffffff;
   outline: 0.0625rem solid #0098FF;
+}
+.color-picker .color-palette div:last-child {
+  border: 0.0625rem solid #EBEBEB;
+}
+.color-picker .color-palette-opacity {
+  display: none;
+  width: 100%;
+  height: 2.5rem;
+  padding-left: 0.219rem;
+  border: 0.0625rem solid #EBEBEB;
+  border-top: none;
+  background-color: #ffffff;
+}
+.color-picker .color-palette-opacity span {
+  display: table-cell;
+  height: 3rem;
+  vertical-align: middle;
+}
+.color-picker .color-palette-opacity span input[type=range]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  width: 0.625rem;
+  height: 0.625rem;
+  border: 0.0625rem solid #c8ced8;
+  border-radius: 50%;
+  background: #ffffff;
+  cursor: pointer;
+}
+.color-picker .color-palette-opacity span input[type=range]::-moz-range-thumb {
+  width: 0.625rem;
+  height: 0.625rem;
+  border: 0.0625rem solid #c8ced8;
+  border-radius: 50%;
+  background: #ffffff;
+  cursor: pointer;
+}
+.color-picker .color-palette-opacity span input[type=range]::-moz-range-progress {
+  background-color: #0098FF;
+  height: 0.0625rem;
+}
+.color-picker .color-palette-opacity span input.slide-object {
+  width: 9.125rem;
+  height: 0.0625rem;
+  background: #c8ced8;
+  border: initial;
+  padding: initial;
+  margin: 0 0.594rem 0 0.625rem;
+  outline: none;
+}
+.color-picker .color-palette-opacity span input.slide-input {
+  width: 3rem !important;
+  height: 2rem;
+  text-align: center;
+  vertical-align: middle;
+}
+.color-picker .color-palette-opacity span label {
+  width: 0.813rem;
+  height: 1.25rem;
+  line-height: 1.25rem;
+  margin: 0 0 0 0.25rem;
+  vertical-align: middle;
 }
 
 /* _modal.scss 
@@ -5648,6 +5807,14 @@ body.modal-active {
   min-height: 13.4375rem;
   padding: 0.3125rem 1.25rem;
 }
+.itsm-popup .view-content pre {
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  white-space: pre-line;
+  white-space: -o-pre-wrap;
+  white-space: -moz-pre-wrap;
+  word-break: break-all;
+}
 .itsm-popup .view-content .view-text {
   margin: 0;
 }
@@ -6070,7 +6237,12 @@ body.modal-active {
   padding: 0.3em 0.5em;
   line-height: inherit;
   position: relative;
+  overflow-wrap: break-word;
+  word-wrap: break-word;
   white-space: pre-line;
+  white-space: -o-pre-wrap;
+  white-space: -moz-pre-wrap;
+  word-break: break-all;
 }
 .tagify__input:empty::before {
   -webkit-transition: 0.2s ease-out;
