--- a/src/main/resources/public/src/scss/template/utilities/_columns.scss
+++ b/src/main/resources/public/src/scss/template/utilities/_columns.scss
@@ -5,24 +5,18 @@
  * @author jy.lim
  * @version 1.0
  */
-.col-1 { width: $column-1; }
-.col-2 { width: $column-2; }
-.col-3 { width: $column-3; }
-.col-4 { width: $column-4; }
-.col-5 { width: $column-5; }
-.col-6 { width: $column-6; }
-.col-7 { width: $column-7; }
-.col-8 { width: $column-8; }
-.col-9 { width: $column-9; }
-.col-10 { width: $column-10; }
-.col-11 { width: $column-11; }
-.col-12 { width: $column-12; }
+// col-1 ~ col-12
+@for $i from 1 through $column-count {
+  .col-#{$i} {
+    width: $column-init * $i;
+  }
+}
 
 // 고정 값이 아닌 %(퍼센트) 비율을 사용하는 경우, 아래 클래스를 사용한다.
 $i: 1;
-@while $i <= 12 {
+@while $i <= $column-count {
   .col-pct-#{$i} {
-    width: (100% / ( 12 / $i ));
+    width: getColumnPercentWidth($column-count) * $i;
   }
   $i: $i + 1;
 }
