--- a/src/main/resources/public/template/download/downloadView.html
+++ b/src/main/resources/public/template/download/downloadView.html
@@ -28,7 +28,7 @@
             <div class="horizontal-bar"></div>
             <div class="flex-column view-row">
                 <div class="view-content">
-                    <pre class="space-line">
+                    <pre>
                         <span class="view-text" th:text="#{${download.downloadCategory}}"/>
                     </pre>
                 </div>
