--- a/src/main/resources/public/template/faq/faqView.html
+++ b/src/main/resources/public/template/faq/faqView.html
@@ -29,8 +29,8 @@
             <div class="horizontal-bar"></div>
             <div class="flex-column view-row">
                 <div class="view-content">
-                    <pre class="space-line">
-                        <span class="view-text auto-break" th:text="${faq?.faqContent}"/>
+                    <pre>
+                        <span class="view-text" th:text="${faq?.faqContent}"/>
                     </pre>
                 </div>
             </div>
