--- a/src/main/resources/public/template/notice/noticePopUp.html
+++ b/src/main/resources/public/template/notice/noticePopUp.html
@@ -23,7 +23,7 @@
             <div class="horizontal-bar"></div>
             <div class="flex-column view-row">
                 <div class="view-content">
-                    <pre class="space-line">
+                    <pre>
                         <span class="view-text" th:text="${noticePopUp?.noticeContents}"/>
                     </pre>
                 </div>
