--- a/src/main/resources/public/template/notice/noticeView.html
+++ b/src/main/resources/public/template/notice/noticeView.html
@@ -29,7 +29,7 @@
             <div class="horizontal-bar"></div>
             <div class="flex-column view-row">
                 <div class="view-content">
-                    <pre class="space-line">
+                    <pre>
                         <span class="view-text" th:text="${notice?.noticeContents}"/>
                     </pre>
                 </div>
